[gd_scene load_steps=15 format=2]

[ext_resource path="res://InfoPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/pope.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/background-tall.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/comic_20.tres" type="DynamicFont" id=4]
[ext_resource path="res://pope.gd" type="Script" id=5]
[ext_resource path="res://main.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/comicsans.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/textures/upgrades/creampie.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/upgrades/sculpture.png" type="Texture" id=9]
[ext_resource path="res://Upgrades.gd" type="Script" id=10]
[ext_resource path="res://assets/fonts/comic_pricetag.tres" type="DynamicFont" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 180, 205 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = ExtResource( 7 )

[node name="main" type="Node2D"]
script = ExtResource( 6 )

[node name="bg" type="Sprite" parent="."]
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="bg2" type="Sprite" parent="bg"]
position = Vector2( 1600, 0 )
scale = Vector2( -1, 1 )
texture = ExtResource( 3 )
centered = false

[node name="pope" type="RigidBody2D" parent="."]
position = Vector2( 0, 640 )
input_pickable = true
mode = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="pope" type="Sprite" parent="pope"]
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -917 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pope"]
position = Vector2( 180, -205 )
shape = SubResource( 1 )

[node name="InfoPanel" type="Panel" parent="."]
margin_right = 720.0
margin_bottom = 90.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Points" type="RichTextLabel" parent="InfoPanel"]
margin_right = 360.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Points: 0[/center]
"
text = "Points: 0
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsShop" type="RichTextLabel" parent="InfoPanel"]
margin_left = 360.0
margin_right = 720.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Points: 0[/center]
"
text = "Points: 0
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsPerSec" type="RichTextLabel" parent="InfoPanel"]
margin_top = 50.0
margin_right = 268.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Points/Second: 0[/center]
"
text = "Points/Second: 0
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonShop" type="Button" parent="InfoPanel"]
margin_left = 280.0
margin_top = 40.0
margin_right = 350.0
margin_bottom = 80.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="InfoPanel"]
margin_left = 370.0
margin_top = 40.0
margin_right = 440.0
margin_bottom = 80.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 180, 320 )
current = true
smoothing_enabled = true
smoothing_speed = 6.9

[node name="Upgrades" type="Control" parent="."]
margin_left = 360.0
margin_right = 400.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creampie" type="Button" parent="Upgrades"]
margin_left = 53.0
margin_top = 100.0
margin_right = 153.0
margin_bottom = 200.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AmountInfo" type="RichTextLabel" parent="Upgrades/Creampie"]
margin_left = 2.0
margin_top = -1.0
margin_right = 92.0
margin_bottom = 26.0
custom_fonts/normal_font = ExtResource( 11 )
bbcode_enabled = true
bbcode_text = "[right]0"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceInfo" type="RichTextLabel" parent="Upgrades/Creampie"]
margin_left = 6.75684
margin_top = 69.1539
margin_right = 96.7568
margin_bottom = 96.1539
custom_fonts/normal_font = ExtResource( 11 )
text = "5"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sculpture" type="Button" parent="Upgrades"]
margin_left = 206.0
margin_top = 100.0
margin_right = 306.0
margin_bottom = 200.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 9 )
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AmountInfo" type="RichTextLabel" parent="Upgrades/Sculpture"]
margin_left = 2.0
margin_top = -1.0
margin_right = 92.0
margin_bottom = 26.0
custom_fonts/normal_font = ExtResource( 11 )
bbcode_enabled = true
bbcode_text = "[right]0"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceInfo" type="RichTextLabel" parent="Upgrades/Sculpture"]
margin_left = 6.757
margin_top = 69.154
margin_right = 96.757
margin_bottom = 96.154
custom_fonts/normal_font = ExtResource( 11 )
text = "8"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointPerSecondTimer" type="Timer" parent="."]
[connection signal="mouse_entered" from="pope" to="pope" method="_on_pope_mouse_entered"]
[connection signal="mouse_exited" from="pope" to="pope" method="_on_pope_mouse_exited"]
[connection signal="pressed" from="InfoPanel/ButtonShop" to="InfoPanel" method="_on_ButtonShop_pressed"]
[connection signal="pressed" from="InfoPanel/ButtonBack" to="InfoPanel" method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="Upgrades/Creampie" to="Upgrades" method="_on_Creampie_pressed"]
[connection signal="pressed" from="Upgrades/Sculpture" to="Upgrades" method="_on_Sculpture_pressed"]
[connection signal="timeout" from="PointPerSecondTimer" to="pope" method="_on_PointPerSecondTimer_timeout"]
